# manipulator

./: .gitmodules  CMakeLists.txt  README.md  package.xml
behaviour_trees/: pickup_box.py  pickup_box.xml  pickup_box_bt3.xml
config/: ros2_control_params.yaml
config/moveit/: manipulator.srdf
description/: robot.urdf.xacro
description/manipulator/urdf/: manipulator.urdf.xacro  manipulator_gazebo.xacro
description/omni_urdf/: depth_camera.xacro
description/omni_urdf/base/: base.gazebo.xacro  base.urdf.xacro
description/omni_urdf/wheel/: wheel.urdf.xacro  wheel_100mm.urdf.xacro  wheel_100mm_light.urdf.xacro
description/urdf/: manipulator.urdf.xacro  manipulator_gazebo.xacro  ros2_control.xacro
include/mobile_bot/: pickup_box_bt.hpp
launch/: controller.launch.py  display.launch.py  gazebo.launch.py  moveit.launch.py  simulation.launch.py
manipulator_bringup/: .gitignore  CMakeLists.txt  package.xml
manipulator_bringup/config/: ros2_control_params.yaml
manipulator_bringup/launch/: controller.launch.py  simulation.launch.py
manipulator_bringup/rviz/: simulation_config.rviz
manipulator_bt/: CMakeLists.txt  package.xml
manipulator_bt/behaviour_trees/: BehaviourTreeConstructor.py  pickup_box.py  pickup_box.xml  pickup_box_bt3.xml
manipulator_bt/include/manipulator_bt/: pickup_box_bt.hpp
manipulator_bt/launch/: behaviour_tree.launch.py
manipulator_bt/src/: detect_aruco.cpp  manipulator_client.cpp  pickup_box_bt.cpp
manipulator_description/: CMakeLists.txt  package.xml
manipulator_description/description/: robot.urdf.xacro  ros2_control.xacro
manipulator_description/description/manipulator/urdf/: manipulator_gazebo.xacro
manipulator_description/description/omni_urdf/: depth_camera.xacro
manipulator_description/description/omni_urdf/base/: base.urdf.xacro
manipulator_description/description/omni_urdf/wheel/: wheel.urdf.xacro  wheel_100mm.urdf.xacro
manipulator_description/launch/: display.launch.py  gazebo.launch.py  remote_interface.launch.py
manipulator_description/rviz/: display_config.rviz  moveit_config.rviz
manipulator_description/worlds/: aruco_on_table2.world
manipulator_moveit/: CMakeLists.txt  package.xml
manipulator_moveit/config/: joint_limits.yaml  kinematics.yaml
manipulator_moveit/launch/: moveit.launch.py
manipulator_moveit/rviz/: moveit_config.rviz
manipulator_msgs/: CMakeLists.txt
manipulator_server/: CMakeLists.txt  package.xml
manipulator_server/launch/: remote_interface.launch.py
manipulator_server/src/: manipulator_task_server.cpp  mobile_bot_task_server.cpp  task_server.cpp
rviz/: display_config.rviz  moveit_config.rviz  simulation_config.rviz
src/: detect_aruco.cpp  pickup_box_bt.cpp  task_server.cpp
worlds/: aruco_on_table.world
